--- a/sign_up.html
+++ b/sign_up.html
@@ -44,22 +44,28 @@
         </div>
 
     </div>
-<!-- end header-->
+    <!-- end header-->
 
     <main class="overflow-hidden position-relative vh-100">
-        <div class="position-absolute top-0 start-0 end-0 bottom-0">
+        <div class="position-absolute top-0 start-0 end-0 bottom-0 overflow-hidden">
             <div class="section-body section-page vh-100">
                 <div class="container h-100">
                     <div class="hstack justify-content-center flex-column h-100 position-relative">
                         <div class="section-form__decor-left">
-                            <img src="/assets/images/circle1.png" width="21" height="21" alt="Circle" class="circle-1 position-absolute zi-1">
-                            <img src="/assets/images/star_left.png" width="107" height="105" alt="Star" class="star-left position-absolute zi-1">
-                            <img src="/assets/images/circle3.png" width="21" height="21" alt="Circle" class="circle-2 position-absolute zi-1">
+                            <img src="assets/images/circle1.png" width="21" height="21" alt="Circle"
+                                 class="circle-1 position-absolute zi-1">
+                            <img src="assets/images/star_left.png" width="107" height="105" alt="Star"
+                                 class="star-left position-absolute zi-1">
+                            <img src="assets/images/circle3.png" width="21" height="21" alt="Circle"
+                                 class="circle-2 position-absolute zi-1">
                         </div>
                         <div class="section-form__decor-right">
-                            <img src="/assets/images/circle4.png" width="13" height="13" alt="Circle" class="circle-3 position-absolute zi-1">
-                            <img src="/assets/images/star_right.png" width="67" height="66" alt="Star" class="star-right position-absolute zi-1">
-                            <img src="/assets/images/circle2.png" width="13" height="13" alt="Circle" class="circle-4 position-absolute zi-1">
+                            <img src="assets/images/circle4.png" width="13" height="13" alt="Circle"
+                                 class="circle-3 position-absolute zi-1">
+                            <img src="assets/images/star_right.png" width="67" height="66" alt="Star"
+                                 class="star-right position-absolute zi-1">
+                            <img src="assets/images/circle2.png" width="13" height="13" alt="Circle"
+                                 class="circle-4 position-absolute zi-1">
                         </div>
                         <div class="zi-2 position-relative w-100 hstack flex-column justify-content-center text-center">
                             <a href="" class="d-block header-logo">
@@ -79,10 +85,12 @@
                                     <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
                                         <label class="form-label mb-0 hstack justify-content-center" for="frm-number">+84</label>
                                         <input type="tel" class="form-control" name="" autocomplete="off"
-                                               maxlength="10"  minlength="10" id="frm-number" placeholder="(000)-000-000">
+                                               maxlength="15" minlength="10" id="frm-number"
+                                               placeholder="(000)-000-000">
                                     </div>
                                     <div class="mt-3">
-                                        <button type="submit" class="button-theme button-theme_dark w-100" aria-label="" disabled>
+                                        <button type="submit" class="button-theme button-theme_dark w-100" aria-label=""
+                                                disabled>
                                             Next
                                         </button>
                                     </div>
@@ -92,7 +100,6 @@
                         </div>
 
                     </div>
-
                 </div>
             </div>
         </div>
