--- a/sign_up.html
+++ b/sign_up.html
@@ -48,7 +48,7 @@
 
     <main class="overflow-hidden position-relative vh-100">
         <div class="position-absolute top-0 start-0 end-0 bottom-0 overflow-hidden">
-            <div class="section-body section-page vh-100">
+            <div class="section-body section-page vh-100 overflow-hidden">
                 <div class="container h-100">
                     <div class="hstack justify-content-center flex-column h-100 position-relative">
                         <div class="section-form__decor-left">
