--- a/sign_up.html
+++ b/sign_up.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-<div class="vstack position-relative vh-100 overflow-hidden">
+<!--<div class="vstack position-relative vh-100 overflow-hidden">-->
     <div class="section-header bg-white position-fixed top-0 start-0 end-0 zi-10 w-100">
         <div class="container">
             <div class="vstack flex-row justify-content-between">
@@ -47,8 +47,8 @@
     <!-- end header-->
 
     <main class="overflow-hidden position-relative vh-100">
-        <div class="position-absolute top-0 start-0 end-0 bottom-0 overflow-hidden">
-            <div class="section-body section-page vh-100 overflow-hidden">
+<!--        <div class="position-absolute top-0 start-0 end-0 bottom-0 overflow-hidden">-->
+            <div class="section-body section-page position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
                 <div class="container h-100">
                     <div class="hstack justify-content-center flex-column h-100 position-relative">
                         <div class="section-form__decor-left">
@@ -102,9 +102,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+<!--        </div>-->
     </main>
-</div>
+<!--</div>-->
 
 <script type="text/javascript" src="./assets/plugins/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
