--- a/sign_up.html
+++ b/sign_up.html
@@ -26,85 +26,84 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-<!--<div class="vstack position-relative vh-100 overflow-hidden">-->
-    <div class="section-header bg-white position-fixed top-0 start-0 end-0 zi-10 w-100">
-        <div class="container">
-            <div class="vstack flex-row justify-content-between">
-                <a href="./index.html"
-                   class="header-back">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                         viewBox="0 0 24 24" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                              d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
-                              fill="#191E24"></path>
-                    </svg>
-                </a>
+
+<div class="section-header bg-white position-fixed top-0 start-0 end-0 zi-10 w-100">
+    <div class="container">
+        <div class="vstack flex-row justify-content-between">
+            <a href="./index.html"
+               class="header-back">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                     viewBox="0 0 24 24" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
+                          fill="#191E24"></path>
+                </svg>
+            </a>
+
+        </div>
+    </div>
+
+</div>
+<!-- end header-->
+
+<main class="overflow-hidden position-relative vh-100">
+    <div class="section-body section-page position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
+        <div class="container h-100">
+            <div class="hstack justify-content-center flex-column h-100 position-relative">
+                <div class="section-form__decor-left">
+                    <img src="assets/images/circle1.png" width="21" height="21" alt="Circle"
+                         class="circle-1 position-absolute zi-1">
+                    <img src="assets/images/star_left.png" width="107" height="105" alt="Star"
+                         class="star-left position-absolute zi-1">
+                    <img src="assets/images/circle3.png" width="21" height="21" alt="Circle"
+                         class="circle-2 position-absolute zi-1">
+                </div>
+                <div class="section-form__decor-right">
+                    <img src="assets/images/circle4.png" width="13" height="13" alt="Circle"
+                         class="circle-3 position-absolute zi-1">
+                    <img src="assets/images/star_right.png" width="67" height="66" alt="Star"
+                         class="star-right position-absolute zi-1">
+                    <img src="assets/images/circle2.png" width="13" height="13" alt="Circle"
+                         class="circle-4 position-absolute zi-1">
+                </div>
+                <div class="zi-2 position-relative w-100 hstack flex-column justify-content-center text-center">
+                    <a href="" class="d-block header-logo">
+                        <img src="assets/images/logo.png" width="126" height="126"
+                             class="w-100 h-100 object-fit-contain" alt="">
+                    </a>
+                    <div class="section-heading">
+                        <h2 class="heading-title-3">
+                            <span class="text-secondary">Sign</span> up
+                        </h2>
+                        <div class="heading-description">
+                            Enter your number phone
+                        </div>
+                    </div>
+                    <div class="section-form w-100">
+                        <form>
+                            <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
+                                <label class="form-label mb-0 hstack justify-content-center"
+                                       for="frm-number">+84</label>
+                                <input type="tel" class="form-control" name="" autocomplete="off"
+                                       maxlength="15" minlength="10" id="frm-number"
+                                       placeholder="(000)-000-000">
+                            </div>
+                            <div class="mt-3">
+                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label=""
+                                        disabled>
+                                    Next
+                                </button>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
 
             </div>
         </div>
-
     </div>
-    <!-- end header-->
+</main>
 
-    <main class="overflow-hidden position-relative vh-100">
-<!--        <div class="position-absolute top-0 start-0 end-0 bottom-0 overflow-hidden">-->
-            <div class="section-body section-page position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
-                <div class="container h-100">
-                    <div class="hstack justify-content-center flex-column h-100 position-relative">
-                        <div class="section-form__decor-left">
-                            <img src="assets/images/circle1.png" width="21" height="21" alt="Circle"
-                                 class="circle-1 position-absolute zi-1">
-                            <img src="assets/images/star_left.png" width="107" height="105" alt="Star"
-                                 class="star-left position-absolute zi-1">
-                            <img src="assets/images/circle3.png" width="21" height="21" alt="Circle"
-                                 class="circle-2 position-absolute zi-1">
-                        </div>
-                        <div class="section-form__decor-right">
-                            <img src="assets/images/circle4.png" width="13" height="13" alt="Circle"
-                                 class="circle-3 position-absolute zi-1">
-                            <img src="assets/images/star_right.png" width="67" height="66" alt="Star"
-                                 class="star-right position-absolute zi-1">
-                            <img src="assets/images/circle2.png" width="13" height="13" alt="Circle"
-                                 class="circle-4 position-absolute zi-1">
-                        </div>
-                        <div class="zi-2 position-relative w-100 hstack flex-column justify-content-center text-center">
-                            <a href="" class="d-block header-logo">
-                                <img src="assets/images/logo.png" width="126" height="126"
-                                     class="w-100 h-100 object-fit-contain" alt="">
-                            </a>
-                            <div class="section-heading">
-                                <h2 class="heading-title-3">
-                                    <span class="text-secondary">Sign</span> up
-                                </h2>
-                                <div class="heading-description">
-                                    Enter your number phone
-                                </div>
-                            </div>
-                            <div class="section-form w-100">
-                                <form>
-                                    <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
-                                        <label class="form-label mb-0 hstack justify-content-center" for="frm-number">+84</label>
-                                        <input type="tel" class="form-control" name="" autocomplete="off"
-                                               maxlength="15" minlength="10" id="frm-number"
-                                               placeholder="(000)-000-000">
-                                    </div>
-                                    <div class="mt-3">
-                                        <button type="submit" class="button-theme button-theme_dark w-100" aria-label=""
-                                                disabled>
-                                            Next
-                                        </button>
-                                    </div>
-
-                                </form>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-<!--        </div>-->
-    </main>
-<!--</div>-->
 
 <script type="text/javascript" src="./assets/plugins/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
