--- a/sign_up.html
+++ b/sign_up.html
@@ -30,7 +30,7 @@
 <div class="section-header bg-white position-fixed top-0 start-0 end-0 zi-10 w-100">
     <div class="container">
         <div class="vstack flex-row justify-content-between">
-            <a href="./index.html"
+            <a href="index.html"
                class="header-back">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                      viewBox="0 0 24 24" fill="none">
