--- a/sign_up_otp.html
+++ b/sign_up_otp.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sign up</title>
+    <title>Sign up OTP</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -72,10 +72,10 @@
                     </a>
                     <div class="section-heading">
                         <h2 class="heading-title-3">
-                            <span class="text-secondary">Sign</span> up
+                            <span class="text-secondary">Phone</span> Verification
                         </h2>
                         <div class="heading-description">
-                            Enter your number phone
+                            Enter your OTP code here
                         </div>
                     </div>
                     <div class="section-form w-100">
@@ -88,9 +88,8 @@
                                        placeholder="(000)-000-000">
                             </div>
                             <div class="mt-4">
-                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label=""
-                                        disabled>
-                                    Next
+                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
+                                    Verify
                                 </button>
                             </div>
 
