--- a/sign_up_done.html
+++ b/sign_up_done.html
@@ -47,7 +47,7 @@
                          class="circle-4 position-absolute zi-1">
                 </div>
                 <div class="zi-2 position-relative w-100 hstack flex-column justify-content-center text-center">
-                    <a href="" class="d-block header-logo">
+                    <a href="" class="d-block header-logo header-logo-done">
                         <img src="assets/images/done.png" width="122" height="113"
                              class="w-100 h-100 object-fit-contain" alt="">
                     </a>
