--- a/forgotpassword_otp.html
+++ b/forgotpassword_otp.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sign up OTP</title>
+    <title>Forgot password OTP</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
