--- a/sign_in.html
+++ b/sign_in.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sign up OTP</title>
+    <title>Sign in</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -73,10 +73,10 @@
                     </a>
                     <div class="section-heading">
                         <h2 class="heading-title-3">
-                            <span class="text-secondary">Phone</span> Verification
+                            <span class="text-secondary">Sign</span> in
                         </h2>
                         <div class="heading-description">
-                            Enter your OTP code here
+                            Enter your number phone
                         </div>
                     </div>
                     <div class="section-form w-100">
@@ -89,15 +89,15 @@
                                        placeholder="(000)-000-000">
                             </div>
                             <div class="mt-4">
-                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
-                                    Verify
+                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label=""
+                                        disabled>
+                                    Next
                                 </button>
                             </div>
 
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
