--- a/forgotpassword_done.html
+++ b/forgotpassword_done.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sign up OTP</title>
+    <title>Forgot password</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -27,25 +27,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-
-<div class="section-header bg-white position-fixed top-0 start-0 end-0 zi-10 w-100">
-    <div class="container">
-        <div class="vstack flex-row justify-content-between">
-            <a href="index.html"
-               class="header-back">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                     viewBox="0 0 24 24" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
-                          fill="#191E24"></path>
-                </svg>
-            </a>
-        </div>
-    </div>
-
-</div>
-<!-- end header-->
-
 <main class="overflow-hidden position-relative vh-100">
     <div class="section-body section-page position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
@@ -67,34 +48,20 @@
                          class="circle-4 position-absolute zi-1">
                 </div>
                 <div class="zi-2 position-relative w-100 hstack flex-column justify-content-center text-center">
-                    <a href="" class="d-block header-logo">
-                        <img src="assets/images/logo.png" width="126" height="126"
+                    <a href="" class="d-block header-logo header-logo-done">
+                        <img src="assets/images/done.png" width="122" height="113"
                              class="w-100 h-100 object-fit-contain" alt="">
                     </a>
                     <div class="section-heading">
-                        <h2 class="heading-title-3">
-                            <span class="text-secondary">Phone</span> Verification
+                        <h2 class="heading-title-3 font-heading">
+                            <span class="text-secondary d-inline-flex">Password reset!</span><br>
+                            Your password has been successfully reset
                         </h2>
-                        <div class="heading-description">
-                            Enter your OTP code here
-                        </div>
                     </div>
                     <div class="section-form w-100">
-                        <form>
-                            <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
-                                <label class="form-label mb-0 hstack justify-content-center"
-                                       for="frm-number">+84</label>
-                                <input type="tel" class="form-control" name="" autocomplete="off"
-                                       maxlength="15" minlength="10" id="frm-number"
-                                       placeholder="(000)-000-000">
-                            </div>
-                            <div class="mt-4">
-                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
-                                    Verify
-                                </button>
-                            </div>
-
-                        </form>
+                        <a href="index.html" class="button-theme button-theme_dark w-100" aria-label="">
+                            Return to the login screen
+                        </a>
                     </div>
                 </div>
 
