--- a/sign_in_password.html
+++ b/sign_in_password.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sign up OTP</title>
+    <title>Sign in Set password</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -73,25 +73,32 @@
                     </a>
                     <div class="section-heading">
                         <h2 class="heading-title-3">
-                            <span class="text-secondary">Phone</span> Verification
+                            <span class="text-secondary">Sign</span> in
                         </h2>
                         <div class="heading-description">
-                            Enter your OTP code here
+                            Enter your new password
                         </div>
                     </div>
                     <div class="section-form w-100">
                         <form>
-                            <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
-                                <label class="form-label mb-0 hstack justify-content-center"
-                                       for="frm-number">+84</label>
-                                <input type="tel" class="form-control" name="" autocomplete="off"
-                                       maxlength="15" minlength="10" id="frm-number"
-                                       placeholder="(000)-000-000">
+                            <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center position-relative">
+                                <label class="form-label mb-0"
+                                       for="frm-password">
+                                    <input type="password" class="form-control" name="" autocomplete="off"
+                                           maxlength="" minlength="10" id="frm-password"
+                                           placeholder="Your password">
+                                </label>
+                                <button type="button" class="border-0 hstack justify-content-center bg-transparent btn-pass view-pass" data-id="frm-password">
+                                    <i class="fas fa-eye"></i>
+                                </button>
                             </div>
                             <div class="mt-4">
                                 <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
-                                    Verify
+                                    Next
                                 </button>
+                                <a href="" class="section-form__link transition-default d-inline-block">
+                                    Forgot password?
+                                </a>
                             </div>
 
                         </form>
