--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,7 @@
     <meta property="og:url" content="">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
+    <meta name="format-detection" content="date=no">
 
     <link rel="icon" href="./assets/images/favicon.png">
     <link rel="apple-touch-icon" href="./assets/images/favicon.png">
@@ -85,7 +86,7 @@
                         </div>
 
                     </div>
-                    <div class="section-profile__flex d-flex align-items-center mt-5">
+                    <div class="section-profile__flex d-flex align-items-center mt-lg-5 mt-4">
                         <div class="profile-item position-relative fw-600">
                             1200<span class="ms-1 text-gray fw-500">feedbacks</span>
                         </div>
