--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
-    <meta name="format-detection" content="date=no">
+    <meta name="format-detection" content="telephone=no, date=no" />
 
     <link rel="icon" href="./assets/images/favicon.png">
     <link rel="apple-touch-icon" href="./assets/images/favicon.png">
@@ -53,7 +53,7 @@
 <main class="overflow-hidden position-relative vh-100">
     <div class="section-body position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
-            <div class="bg-white rounded-4 hstack justify-content-start flex-column h-100 position-relative">
+            <div class="bg-white rounded-4 hstack justify-content-start flex-column position-relative">
                 <div class="section-profile__decor-left">
                     <img src="assets/images/star_left.png" width="107" height="105" alt="Star"
                          class="star-left position-absolute zi-1">
