--- a/edit_profile.html
+++ b/edit_profile.html
@@ -77,7 +77,7 @@
                                 <img src="assets/images/avatar_decor.png" width="220" height="222"
                                      class="image-decor position-absolute top-0 start-0 w-100 h-100 zi-1" alt="">
                                 <img src="assets/images/avatar2.png" class="image-avatar position-absolute zi-2" alt="">
-                                <button class="profile-button__edit hstack justify-content-center rounded-circle bg-white transition-default">
+                                <button class="profile-button__edit d-flex align-items-center justify-content-center rounded-circle bg-white transition-default">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                          xmlns="http://www.w3.org/2000/svg">
                                         <path d="M11.9998 15.1998C13.7671 15.1998 15.1998 13.7671 15.1998 11.9998C15.1998 10.2325 13.7671 8.7998 11.9998 8.7998C10.2325 8.7998 8.7998 10.2325 8.7998 11.9998C8.7998 13.7671 10.2325 15.1998 11.9998 15.1998Z"
