--- a/list_customer.html
+++ b/list_customer.html
@@ -89,7 +89,7 @@
 
                     </div>
                 </div>
-                <div class="page-customer__body d-flex flex-column gap-2 w-100 mt-3">
+                <div class="page-customer__body d-flex flex-column gap-2 w-100 mt-3 scrollbar-hidden">
                     <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
                         <div class="customer-item__name">
                             Baddie
