--- a/profile.html
+++ b/profile.html
@@ -178,7 +178,7 @@
                         </div>
                     </a>
                     <a href="" aria-label=""
-                       class="profile-button disabled transition-default w-100 d-flex align-items-center justify-content-between gap-2">
+                       class="profile-button profile-button-2 transition-default w-100 d-flex align-items-center justify-content-between gap-2">
                         <div class="d-flex align-items-center gap-3">
                             <div class="profile-button__icon">
                                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
