--- a/update.html
+++ b/update.html
@@ -53,15 +53,15 @@
 <main class="overflow-hidden position-relative vh-100">
     <div class="section-body position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
-            <div class="page-pro bg-white p-lg-4 p-md-3 p-2 rounded-4 hstack justify-content-start flex-column position-relative h-100 w-100">
+            <div class="page-pro bg-white p-lg-4 p-3 rounded-4 hstack justify-content-start flex-column position-relative h-100 w-100">
                 <div class="section-heading m-3 mb-4">
                     <h2 class="heading-title-3 text-center">
                         <span class="text-secondary">Level up</span>
                         your manager with Pro
                     </h2>
                 </div>
-                <div class="w-100 mt-md-5 mt-4">
-                    <div class="row row-cols-2 g-md-3 g-2">
+                <div class="page-pro__wrap w-100 mt-md-5">
+                    <div class="row row-cols-md-2 row-cols-1 g-md-3 g-5">
                         <div class="col">
                             <div class="card-pro h-100 position-relative d-flex flex-column">
                                 <div class="card-pro__image bg-white rounded-circle d-flex align-items-center justify-content-center">
