--- a/welcome.html
+++ b/welcome.html
@@ -43,10 +43,10 @@
 					</div>
 				</div>
 				<div class="hstack flex-column gap-2">
-					<a href="sign_in.html" class="button-theme button-theme_secondary button-theme_large w-100">
+					<a href="sign_in_sign_up_forgot_password.html" class="button-theme button-theme_secondary button-theme_large w-100">
 						Sign up
 					</a>
-					<a href="" class="button-theme button-theme_light button-theme_large w-100">
+					<a href="sign_in.html" class="button-theme button-theme_light button-theme_large w-100">
 						Sign in
 					</a>
 				</div>
