--- a/update.html
+++ b/update.html
@@ -60,9 +60,9 @@
                         your manager with Pro
                     </h2>
                 </div>
-                <div class="page-pro__wrap w-100 mt-md-5">
+                <div class="page-pro__wrap w-100 mt-md-5 mt-2">
                     <div class="row row-cols-md-2 row-cols-1 g-md-3 g-5">
-                        <div class="col">
+                        <div class="col pb-md-0 pb-4">
                             <div class="card-pro h-100 position-relative d-flex flex-column">
                                 <div class="card-pro__image bg-white rounded-circle d-flex align-items-center justify-content-center">
                                     <img src="assets/images/basic.png" class="w-100 h-100 object-fit-contain" width="82"
