--- a/welcome.html
+++ b/welcome.html
@@ -30,9 +30,9 @@
 <body class="page-theme">
 
 <main class="overflow-hidden position-relative vh-100">
-	<div class="page-welcome position-absolute top-0 start-0 w-100 h-100 overflow-hidden" style="background: url('assets/images/welcome.png') top center/cover no-repeat">
+	<div class="page-welcome section-page-70 position-absolute top-0 start-0 w-100 h-100 overflow-hidden" style="background: url('assets/images/welcome.png') top center/cover no-repeat">
 		<div class="container h-100 position-relative zi-2">
-			<div class="section-page-70 ps-md-4 pe-md-4 h-100 hstack justify-content-end flex-column position-relative text-center">
+			<div class="p-4 pt-0 h-100 hstack justify-content-end flex-column position-relative text-center">
 				<div class="section-heading mb-5">
 					<h2 class="heading-title text-white">
 						<span class="text-secondary">Connect</span><br>
