Config struct  code

--- a/sign_up.html
+++ b/sign_up.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Sign up</title>
+    <title>Sign Up</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -89,16 +89,13 @@
                                        placeholder="(000)-000-000">
                             </div>
                             <div class="mt-4">
-                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label=""
-                                        disabled>
+                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
                                     Next
                                 </button>
                             </div>
-
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
