--- a/sign_up_otp.html
+++ b/sign_up_otp.html
@@ -81,23 +81,19 @@
                     </div>
                     <div class="section-form w-100">
                         <form>
-                            <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
-                                <label class="form-label mb-0 hstack justify-content-center"
-                                       for="frm-number">+84</label>
-                                <input type="tel" class="form-control" name="" autocomplete="off"
-                                       maxlength="15" minlength="10" id="frm-number"
-                                       placeholder="(000)-000-000">
-                            </div>
-                            <div class="mt-4">
-                                <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
-                                    Verify
-                                </button>
-                            </div>
-
+	                        <div class="form-group form-group-input d-flex align-items-center gap-1 justify-content-center">
+		                        <input type="tel" class="form-control text-center" name="" autocomplete="off"
+		                               maxlength="4" minlength="4" id="frm-number"
+		                               placeholder="XXXX">
+	                        </div>
+	                        <div class="mt-4">
+		                        <button type="submit" class="button-theme button-theme_dark w-100" aria-label="">
+			                        Verify
+		                        </button>
+	                        </div>
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
