--- a/notification.html
+++ b/notification.html
@@ -205,6 +205,78 @@
                             <div class="time">2h ago</div>
                         </div>
                     </div>
+                    <div class="notification-item fw-500 bg-white d-flex align-items-start  justify-content-between gap-1">
+                        <div class="d-flex align-items-center gap-md-3 gap-2">
+                            <div class="notification-item__image hstack justify-content-center flex-shrink-0">
+                                <img src="assets/images/notification.png" class="w-100 h-100 object-fit-contain"
+                                     width="84"
+                                     height="84" alt="">
+                            </div>
+                            <div class="hstack flex-column justify-content-start align-items-start">
+                                <div class="notification-item__title">
+                                    Break a rule and you may receive a Break a rule and you may receive a
+                                </div>
+                                <div class="notification-item__text text-gray fw-400">
+                                    A floating top-up counter which shows how much time can be used. Try to settle
+                                    disputes
+                                    with discussion
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="notification-item__time text-nowrap text-gray position-relative ms-4 fw-400">
+                            <div class="circle position-relative d-block rounded-circle ms-auto"></div>
+                            <div class="time">2h ago</div>
+                        </div>
+                    </div>
+                    <div class="notification-item fw-500 bg-white d-flex align-items-start  justify-content-between gap-1">
+                        <div class="d-flex align-items-center gap-md-3 gap-2">
+                            <div class="notification-item__image hstack justify-content-center flex-shrink-0">
+                                <img src="assets/images/notification.png" class="w-100 h-100 object-fit-contain"
+                                     width="84"
+                                     height="84" alt="">
+                            </div>
+                            <div class="hstack flex-column justify-content-start align-items-start">
+                                <div class="notification-item__title">
+                                    Break a rule and you may receive a Break a rule and you may receive a
+                                </div>
+                                <div class="notification-item__text text-gray fw-400">
+                                    A floating top-up counter which shows how much time can be used. Try to settle
+                                    disputes
+                                    with discussion
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="notification-item__time text-nowrap text-gray position-relative ms-4 fw-400">
+                            <div class="circle position-relative d-block rounded-circle ms-auto"></div>
+                            <div class="time">2h ago</div>
+                        </div>
+                    </div>
+                    <div class="notification-item fw-500 bg-white d-flex align-items-start  justify-content-between gap-1">
+                        <div class="d-flex align-items-center gap-md-3 gap-2">
+                            <div class="notification-item__image hstack justify-content-center flex-shrink-0">
+                                <img src="assets/images/notification.png" class="w-100 h-100 object-fit-contain"
+                                     width="84"
+                                     height="84" alt="">
+                            </div>
+                            <div class="hstack flex-column justify-content-start align-items-start">
+                                <div class="notification-item__title">
+                                    Break a rule and you may receive a Break a rule and you may receive a
+                                </div>
+                                <div class="notification-item__text text-gray fw-400">
+                                    A floating top-up counter which shows how much time can be used. Try to settle
+                                    disputes
+                                    with discussion
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="notification-item__time text-nowrap text-gray position-relative ms-4 fw-400">
+                            <div class="circle position-relative d-block rounded-circle ms-auto"></div>
+                            <div class="time">2h ago</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
