--- a/report.html
+++ b/report.html
@@ -53,7 +53,7 @@
 <main class="overflow-hidden position-relative vh-100">
     <div class="section-body position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
-            <div class="page-report bg-white rounded-4 p-md-4 p-3 overflow-hidden hstack justify-content-start flex-column position-relative h-100">
+            <div class="page-report bg-white rounded-4 p-md-4 pb-4 p-3 overflow-hidden hstack justify-content-start flex-column position-relative h-100">
                 <div class="page-report__header d-flex align-items-center justify-content-between gap-3 w-100 mb-4">
                     <div class="section-heading mb-0">
                         <div class="heading-title-4">
@@ -83,8 +83,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="page-report__body w-100 overflow-scroll scrollbar-hidden">
-                    <div class="row row-cols-md-2 row-cols-1 g-md-3 g-2 w-100">
+                <div class="page-report__body overflow-scroll scrollbar-hidden">
+                    <div class="row row-cols-md-2 row-cols-1 g-md-3 g-2">
                         <div class="col">
                             <div class="card card-report bg-orange hstack align-items-start gap-1 flex-column border-0 fw-600 h-100 p-4">
                                 <div class="card-report__title text-primary">
