--- a/report.html
+++ b/report.html
@@ -83,7 +83,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="page-report__body overflow-scroll scrollbar-hidden">
+                <div class="page-report__body scrollbar-hidden">
                     <div class="row row-cols-md-2 row-cols-1 g-md-3 g-2">
                         <div class="col">
                             <div class="card card-report bg-orange hstack align-items-start gap-1 flex-column border-0 fw-600 h-100 p-4">
